[package]
name = 'pallet-constitution'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame_system = { workspace = true }
sp-runtime = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
common = { package = 'pallet-common', default-features = false, path = '../common'}

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "common/runtime-benchmarks",
]
std = [
    'serde',
    'codec/std',
    'sp-std/std',
    'frame-support/std',
    'frame_system/std',
    'sp-runtime/std',
    'scale-info/std',
    'pallet-balances/std',
    'common/std',
    'frame-benchmarking?/std',
]
try-runtime = [ "frame-support/try-runtime"]
