[package]
name = 'pallet-content-directory'
version = '4.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'a200cdb93c6af5763b9c7bf313fa708764ac88ca'}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'a200cdb93c6af5763b9c7bf313fa708764ac88ca'}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'a200cdb93c6af5763b9c7bf313fa708764ac88ca'}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'a200cdb93c6af5763b9c7bf313fa708764ac88ca'}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'a200cdb93c6af5763b9c7bf313fa708764ac88ca'}
codec = { package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive'] }
serde = {version = '1.0.101', features = ['derive'], optional = true}
common = { package = 'pallet-common', default-features = false, path = '../common'}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'a200cdb93c6af5763b9c7bf313fa708764ac88ca'}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'a200cdb93c6af5763b9c7bf313fa708764ac88ca'}

[features]
default = ['std']
std = [
	'sp-std/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'sp-arithmetic/std',
	'codec/std',
	'serde',
	'common/std',
]
