[package]
name = 'pallet-content-directory'
version = '5.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6cbe1772bf258793fa9845daa8f43ea0cadee596'}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6cbe1772bf258793fa9845daa8f43ea0cadee596'}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6cbe1772bf258793fa9845daa8f43ea0cadee596'}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6cbe1772bf258793fa9845daa8f43ea0cadee596'}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6cbe1772bf258793fa9845daa8f43ea0cadee596'}
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive']}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = {version = '1.0.101', features = ['derive'], optional = true}
common = { package = 'pallet-common', default-features = false, path = '../common'}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6cbe1772bf258793fa9845daa8f43ea0cadee596'}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6cbe1772bf258793fa9845daa8f43ea0cadee596'}

[features]
default = ['std']
std = [
	'sp-std/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'sp-arithmetic/std',
	'codec/std',
	'serde',
	'common/std',
	'scale-info/std',
]
