[package]
name = 'substrate-content-working-group-module'
version = '1.0.0'
authors = ['Joystream contributors']
edition = '2018'

[features]
default = ['std']
std = [
	'sr-primitives/std',
	'srml-support/std',
	'system/std',
    'serde',
    'codec/std',
    'primitives/std',
    'rstd/std',
    'membership/std',
    'forum/std',
    'hiring/std',
    'stake/std',
    'minting/std',
    'versioned_store/std',
    'versioned_store_permissions/std',
    'recurringrewards/std',
]


[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.srml-support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.forum]
default_features = false
package = 'substrate-forum-module'
path = '../forum'

[dependencies.minting]
default_features = false
package = 'substrate-token-mint-module'
path = '../token-minting'

[dependencies.stake]
default_features = false
package = 'substrate-stake-module'
path = '../stake'

[dependencies.recurringrewards]
default_features = false
package = 'substrate-recurring-reward-module'
path = '../recurring-reward'

[dependencies.hiring]
default_features = false
package = 'substrate-hiring-module'
path = '../hiring'

[dependencies.versioned_store]
default_features = false
package ='substrate-versioned-store'
path = '../versioned-store'

[dependencies.versioned_store_permissions]
default_features = false
package = 'substrate-versioned-store-permissions-module'
git = 'https://github.com/joystream/substrate-versioned-store-permissions-module'
tag = 'v1.0.1'

[dependencies.membership]
default_features = false
package = 'substrate-membership-module'
path = '../membership'

[dev-dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dev-dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dev-dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dev-dependencies.common]
default_features = false
package = 'substrate-common-module'
path = '../common'