[package]
name = 'pallet-content-working-group'
version = '3.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = 'parity-scale-codec', version = '1.3.1', default-features = false, features = ['derive'] }
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'}
system = { package = 'frame-system', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'}
membership = { package = 'pallet-membership', default-features = false, path = '../membership'}
stake = { package = 'pallet-stake', default-features = false, path = '../stake'}
hiring = { package = 'pallet-hiring', default-features = false, path = '../hiring'}
minting = { package = 'pallet-token-mint', default-features = false, path = '../token-minting'}
recurringrewards = { package = 'pallet-recurring-reward', default-features = false, path = '../recurring-reward'}
versioned_store = { package = 'pallet-versioned-store', default-features = false, path = '../versioned-store'}
versioned_store_permissions = { package = 'pallet-versioned-store-permissions', default-features = false, path = '../versioned-store-permissions'}
common = { package = 'pallet-common', default-features = false, path = '../common'}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'}
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'}
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'}

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'sp-std/std',
	'frame-support/std',
	'system/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
	'membership/std',
	'stake/std',
	'hiring/std',
	'minting/std',
	'recurringrewards/std',
    'versioned_store/std',
    'versioned_store_permissions/std',
	'common/std',
]
