[package]
name = 'pallet-content'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = {version = '1.0.101', features = ['derive'], optional = true}
strum = {version = "0.19", optional = true}
strum_macros = {version = "0.19", optional = true}
common = { package = 'pallet-common', default-features = false, path = '../common'}
storage = { package = 'pallet-storage', default-features = false, path = '../storage'}
membership = { package = 'pallet-membership', default-features = false, path = '../membership'}
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
project-token = { package = 'pallet-project-token', default-features = false, path = '../project-token'}
varaint-count = { version = '1.1.0', package = 'variant_count' }

# Benchmarking
frame-benchmarking = { package = 'frame-benchmarking', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e', optional = true}
working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group', optional = true}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
randomness-collective-flip = { package = 'pallet-insecure-randomness-collective-flip', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler'}
working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group'}
derive-fixture = { package = 'derive-fixture', default-features = false, path = '../support/derive-fixture'}
common = { package = 'pallet-common', default-features = false, features = ['test'], path = '../common'}
derive-new = "0.5"

[features]
default = ['std']
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"membership/runtime-benchmarks",
	"storage/runtime-benchmarks",
	"common/runtime-benchmarks",
	"working-group",
]
std = [
	'sp-std/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'sp-arithmetic/std',
	'codec/std',
	'serde',
	'strum',
	'strum_macros',
	'common/std',
	'storage/std',
	'balances/std',
	'membership/std',
	'project-token/std',
	'scale-info/std',
]
