[package]
name = 'pallet-content'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
sp-std = { workspace = true }
sp-runtime = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = [
	'derive',
] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
common = { package = 'pallet-common', default-features = false, path = '../common' }
storage = { package = 'pallet-storage', default-features = false, path = '../storage' }
membership = { package = 'pallet-membership', default-features = false, path = '../membership' }
balances = { workspace = true }
project-token = { package = 'pallet-project-token', default-features = false, path = '../project-token' }
varaint-count = { version = '1.1.0', package = 'variant_count' }

# Benchmarking
frame-benchmarking = { workspace = true, optional = true }
working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group', optional = true }
sp-core = { workspace = true }

# util
log = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
pallet-timestamp = { workspace = true }
randomness-collective-flip = { workspace = true }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler' }
working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group' }
derive-fixture = { workspace = true }
common = { package = 'pallet-common', default-features = false, features = [
	'test',
], path = '../common' }
vesting = { workspace = true }
derive-new = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"membership/runtime-benchmarks",
	"storage/runtime-benchmarks",
	"common/runtime-benchmarks",
	"working-group",
]
std = [
	'sp-std/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'sp-arithmetic/std',
	'codec/std',
	'serde',
	'strum',
	'strum_macros',
	'common/std',
	'storage/std',
	'balances/std',
	'membership/std',
	'vesting/std',
	'project-token/std',
	'scale-info/std',
	'frame-benchmarking?/std',
]
try-runtime = ["frame-support/try-runtime"]
