[package]
name = 'pallet-council'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = '1.0.101', optional = true}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe'}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe'}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe'}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe'}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe'}
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe'}
common = { package = 'pallet-common', default-features = false, path = '../common'}
referendum = { package = 'pallet-referendum', default-features = false, path = '../referendum'}
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler'}
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe'}

#Benchmark dependencies
frame-benchmarking = { package = 'frame-benchmarking', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe', optional = true}
membership = { package = 'pallet-membership', default-features = false, path = '../membership', optional = true}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe'}
rand = "0.7.3"
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '31f4f7654cf8e27e0d73ffeb1c11b2df2d4fbffe'}
membership = { package = 'pallet-membership', default-features = false, path = '../membership'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking', 'membership']
std = [
    'codec/std',
    'serde',
    'sp-core/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'common/std',
    'balances/std',
    'membership/std',
    'referendum/std',
    'staking-handler/std',
    'scale-info/std',
]