[package]
name = 'pallet-council'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-arithmetic = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
common = { package = 'pallet-common', default-features = false, path = '../common'}
referendum = { package = 'pallet-referendum', default-features = false, path = '../referendum'}
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler'}
balances = { workspace = true }

#Benchmark dependencies
frame-benchmarking = { workspace = true, optional = true }
membership = { package = 'pallet-membership', default-features = false, path = '../membership', optional = true}

[dev-dependencies]
sp-io = { workspace = true }
rand = "0.7.3"
pallet-timestamp = { workspace = true }
membership = { package = 'pallet-membership', default-features = false, path = '../membership'}

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'membership/runtime-benchmarks',
    'common/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'sp-core/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'common/std',
    'balances/std',
    'membership/std',
    'referendum/std',
    'staking-handler/std',
    'scale-info/std',
    'frame-benchmarking?/std',
]
try-runtime = [ "frame-support/try-runtime"]
