[package]
name = 'pallet-forum'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = [
	'derive',
] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-timestamp = { workspace = true }
common = { package = 'pallet-common', default-features = false, path = '../common' }
sp-io = { workspace = true }
balances = { workspace = true }

# Benchmarking dependencies
frame-benchmarking = { workspace = true, optional = true }
membership = { package = 'pallet-membership', default-features = false, path = '../membership', optional = true }
working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group', optional = true }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler', optional = true }
sp-core = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true }
vesting = { workspace = true }
membership = { package = 'pallet-membership', default-features = false, path = '../membership' }
working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group' }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler' }


[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking/runtime-benchmarks',
	'membership/runtime-benchmarks',
	'working-group/runtime-benchmarks',
	'staking-handler',
	'sp-core',
	'common/runtime-benchmarks',
]
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
	'sp-io/std',
	'pallet-timestamp/std',
	'common/std',
	'balances/std',
	'membership/std',
	'working-group/std',
	'scale-info/std',
	'frame-benchmarking?/std',
]
try-runtime = ["frame-support/try-runtime"]
